# Fastapi_blended_12_2

./: .env  .gitignore  Bot.py  Dockerfile  LICENSE  Pipfile  README.md  async_main_bs4.py  cleaner.py  connect.py  create.py  db.sqlite3  example.env  factorize.py  insert.py  logs.txt  main.js  main.py  main_bs4.py  message.html  pyproject.toml  server.py  test.db  test.py
conf/: db.py  models.py  seed.py
data/: data.json
db/: hw6.sqlite
first_task/: main.py  models.py  seed.py
for_sql/: 1.sql  10.sql  11.sql  12.sql  2.sql  3.sql  4.sql  5.sql  6.sql  7.sql  8.sql  9.sql  create-tables.sql
migrations/: env.py
migrations/versions/: 3bddfbc04507_add_grade_date_row.py  e66a0065ad1e_init.py
queries/: 1.py  10.py  11.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
second_task/: consumer_email.py  consumer_sms.py  models.py  producer.py  seed.py
src/auth/: routes.py  users.py
src/contacts/: models.py  repository.py  routes.py  schemas.py
storage/: authors.json  db.json
templates/: blog.jinja
wogp/: .env  example.env  manage.py  seed.py
wogp/account/: forms.py  urls.py  views.py
wogp/account/static/: style.css
wogp/account/templates/: base.html  logout.html  signin.html  signup.html
wogp/noteapp/: forms.py  models.py  urls.py  views.py
wogp/noteapp/migrations/: 0001_initial.py  0002_remove_quote_author_quote_author.py  0003_remove_quote_tags_quote_tags.py  0004_alter_quote_author_alter_quote_tags.py  0005_remove_quote_tags_quote_tags.py  0006_alter_quote_author.py
wogp/noteapp/templates/: addauthor.html  addquote.html  addtag.html  authordetail.html  quotes.html
wogp/wogp/: asgi.py  settings.py  urls.py  wsgi.py
(+1 files in other folders)
