[tool.poetry]
name = "hw-9"
version = "0.1.0"
description = ""
authors = ["Delah0ya <viktor.deleichuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.2"
lxml = "^5.1.0"
httpx = "^0.27.0"
fake-useragent = "^1.4.0"
pyppeteer = "^2.0.0"
scrapy = "^2.11.1"
aiofile = "^3.8.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
