[tool.poetry]
name = "hw-11"
version = "0.1.0"
description = ""
authors = ["Delah0ya <viktor.deleichuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiosqlite = "^0.20.0"
fastapi = "^0.110.0"
sqlalchemy = "^2.0.28"
uvicorn = "^0.28.1"
pydantic = {extras = ["email"], version = "^2.6.4"}
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
